<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu"
            app:title="@string/views">

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="16dp"
            android:text="@string/anylytics_demo"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_1" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/action_3"
            style="@style/Widget.Material3.Button.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_3"
            app:icon="@drawable/ic_share" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>